Fix up flicker of white.

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -72,7 +72,7 @@ body {
   background-position: center;
   image-rendering: pixelated;
   display: block;
-  @apply absolute top-0 left-0 bottom-0 right-0 z-0 h-full w-full;
+  @apply absolute top-0 left-0 bottom-0 right-0 z-10 h-full w-full;
 }
 
 .carousel-credit {
@@ -81,7 +81,7 @@ body {
 
 .carousel-image {
   z-index: -1;
-  @apply w-full h-full flex justify-center items-center overflow-hidden;
+  @apply w-full h-full overflow-hidden;
 }
 
 
